2010-08-03  Elliott Baron  <ebaron@fedoraproject.org>

	* src/org/eclipse/linuxtools/internal/valgrind/cachegrind/CollapseAction.java: New file.
	* src/org/eclipse/linuxtools/internal/valgrind/cachegrind/ExpandAction.java: New file.
	* META-INF/MANIFEST.MF: Remove internal dependencies.
	* src/org/eclipse/linuxtools/internal/valgrind/cachegrind/CachegrindLaunchDelegate.java (parseOutput): API change. 
	(getCommandArray): Likewise.
	(initializeView): Likewise.
	* src/org/eclipse/linuxtools/internal/valgrind/cachegrind/CachegrindParser.java (parse): Superclass moved to static utils class. 
	(parseData): Likewise.
	(parseDescription): Likewise.
	* src/org/eclipse/linuxtools/internal/valgrind/cachegrind/CachegrindPlugin.java: Remove internals use. 
	* src/org/eclipse/linuxtools/internal/valgrind/cachegrind/CachegrindToolPage.java (setValgrindVersion): API change. 
	* src/org/eclipse/linuxtools/internal/valgrind/cachegrind/CachegrindViewPart.java: Remove internals use.

2010-07-26  Elliott Baron  <ebaron@fedoraproject.org>

	* META-INF/MANIFEST.MF: Bump version to 0.7.0.
	* src/org/eclipse/linuxtools/internal/valgrind/cachegrind/CachegrindLaunchDelegate.java: Remove dependence on
	internal Valgrind launch delegate.

2009-08-11  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/valgrind/cachegrind: Removed.
	* META-INF/MANIFEST.MF: Bump version to 0.3.0.	

2009-08-07  Andrew Overholt  <overholt@redhat.com>

	Bug #285861

	* plugin.properties: Change Provider to Eclipse.

2009-07-30  Elliott Baron  <ebaron@redhat.com>

	* src/org/eclipse/linuxtools/valgrind/cachegrind: Removed.
	* src/org/eclipse/linuxtools/valgrind/cachegrind/model: Removed.
	* src/org/eclipse/linuxtools/internal/valgrind/cachegrind: New package.
	* src/org/eclipse/linuxtools/internal/valgrind/cachegrind/model: New package.  
	* .project: Enabled API analysis.
	* META-INF/MANIFEST.MF: Export internal packages.
	* plugin.xml: Update class references.
