@@ -97,7 +97,7 @@ public class CachegrindLaunchDelegate implements IValgrindLaunchDelegate {
 	
 	public void initializeView(IValgrindToolView view, String contentDescription, IProgressMonitor monitor)
 			throws CoreException {
-		if (view instanceof CachegrindViewPart) {
+		if (outputs != null && view instanceof CachegrindViewPart) {
 			((CachegrindViewPart) view).setOutputs(outputs);
 		}
 		monitor.worked(1);
