@@ -322,7 +322,7 @@ public class MassifViewPart extends ViewPart implements IValgrindToolView {
 
 	protected String getInputName(String description) {
 		String launchName = description.substring(0, description
-				.indexOf("[massif]")); //$NON-NLS-1$
+				.indexOf("[massif")); //$NON-NLS-1$
 		return launchName.trim();
 	}
 
